--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,12 +63,15 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
+    implementation 'com.google.dagger:hilt-android:2.48.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.44'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.10"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10"
+
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
 }
